--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,9 @@ body{
 
 .header{
     grid-area: 1 / 2 / 2 / -1;
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    grid-template-columns: 2fr 1fr;
 }   
 .main{
     grid-area: 2 / 2 / -1 / -1;
