--- a/styles.css
+++ b/styles.css
@@ -98,10 +98,16 @@ img{
     justify-content: space-evenly;
     align-items: center;
     margin: 0 50px;
+    font-size: 1.2rem;
 }
 #notifications img{
-    width: 13%;
+    /* width: 13%; */
+    height: 80%;
 }
+#notifications p{
+    font-family: Roboto_bold;
+}
+
 
 #hiThere_section{
     grid-area: 2 / 1 / -1 / 2;
