--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ img{
     width: 100%;
     display: grid;
     grid-template-columns: minmax(100px, 1fr) minmax(400px, 4fr);
-    grid-template-rows: minmax(100px, 1fr) minmax(100%, 100%);
+    grid-template-rows: minmax(200px, 1fr) minmax(100%, 100%);
 }
 .sidebar,
 .header,
@@ -101,8 +101,7 @@ img{
     font-size: 1.2rem;
 }
 #notifications img{
-    /* width: 13%; */
-    height: 80%;
+    height: 50%;
 }
 #notifications p{
     font-family: Roboto_bold;
@@ -111,10 +110,24 @@ img{
 
 #hiThere_section{
     grid-area: 2 / 1 / -1 / 2;
+    display: flex;
+    font-family: Roboto_bold;
+    align-items: center;
+    margin-left: 50px;
+    gap: 20px;
+
 }
 #hiThere_section img{
-    
-    height: 100%;
+    height: 75%;
+}
+#hiThere_section span{
+    display: block;
+    font-size: 1rem;
+    margin-bottom: 5px;
+}
+#hiThere_section p{
+    margin: 0;
+    padding: 0;
 }
 
 
