--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,20 @@ img{
 
 #community_buttons{
     grid-area: 2 / 2 / -1 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+#community_buttons .button{
+    background-color: #1992D4;
+    border: none;
+    width: 100px;
+    height: 35px;
+    border-radius: 20px;
+    color: white;
+    font-family: Roboto_bold;
+    cursor: pointer;
 }
 
 .main{
