--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@
     font-family: Roboto_bold;
     src: url(/fonts_text/Roboto-Bold.ttf);
 }
+@font-face {
+    font-family: Roboto_medium;
+    src: url(/fonts_text/Roboto-Medium.ttf);
+}
 body{
     font-family: Roboto_regular, sans-serif;
     font-size: 16px;
