--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@
 body{
     font-family: Roboto_regular, sans-serif;
     font-size: 16px;
-    height: 100vh;
     justify-content: center;
     align-items: center;
     padding: 25px 50px 25px 50px;
@@ -29,16 +28,13 @@ img{
     border-radius: 50%;
 }
 .wrapper{
-    height: 100%;
-    width: 100%;
     display: grid;
     grid-template-columns: minmax(100px, 1fr) minmax(400px, 4fr);
-    grid-template-rows: minmax(200px, 1fr) minmax(100%, 100%);
+    grid-template-rows: 150px 750px;
 }
 .sidebar,
 .header,
 .main{
-    border: 2px solid crimson;
     font-size: 1.5rem;
 }
 .sidebar{
@@ -156,30 +152,51 @@ img{
 .main{
     grid-area: 2 / 2 / -1 / -1;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 2fr 1fr;
+    background-color: #E2E8F0;
+    
 }
 #main_content{
     display: grid;
     grid-template-rows: 5% 95%;
+    gap: 20px;
 }
 .article{
+    border-left: 10px solid #F0B429;
+    border-radius: 10px;
+    background-color: white;
     font-family: Roboto_regular;
     font-size: 0.8rem;
+    padding: 25px 10px;
+    display: flex;
+    flex-direction: column;
 }
+.article_icons{
+    align-self: flex-end;
+    margin-top: auto;
+}
+.article_icons{
+    display: flex;
+    gap: 35px;
+    font-size: 25px;
+}
+
+
 .article h1{
     font-family: Roboto_medium;
     font-size: 0.9rem;
     margin: 0;
     }
 .article p {
-    margin: 0; 
+    margin: 0;
+    color: #646464;
 }
 #allArticles{
     display: grid;
-    grid-auto-flow: column;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 15px;
+    grid-template-rows: repeat(auto-fit, 200px);
+    grid-gap: 20px;
+    margin-left: 20px;
 }
 
 #yourProjects{
@@ -187,4 +204,9 @@ img{
     width: 100%;
     margin: 0;
     align-self: flex-end;
+    margin-left: 20px;
+}
+
+#side_content{
+    margin-left: 50px;
 }
