Adjusted font and positions a little bit

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ img{
 .wrapper{
     display: grid;
     grid-template-columns: minmax(100px, 1fr) minmax(400px, 4fr);
-    grid-template-rows: 150px 900px;
+    grid-template-rows: 150px 1200px;
 }
 .sidebar,
 .header,
@@ -165,10 +165,12 @@ img{
     border-radius: 10px;
     background-color: white;
     font-family: Roboto_regular;
-    font-size: 0.8rem;
-    padding: 25px 10px;
+    font-size: 1rem;
+    padding: 25px 25px;
     display: flex;
     flex-direction: column;
+    gap: 25px;
+    overflow: hidden;
 }
 .article_icons{
     align-self: flex-end;
@@ -183,19 +185,20 @@ img{
 
 .article h1{
     font-family: Roboto_medium;
-    font-size: 0.9rem;
+    font-size: 1.1rem;
     margin: 0;
     }
 .article p {
     margin: 0;
     color: #646464;
+    height: 45%;
     overflow: hidden;
     word-break: break-all;
 }
 #allArticles{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(auto-fit, 200px);
+    grid-template-rows: repeat(auto-fill, 200px);
     grid-gap: 20px;
     margin-left: 20px;
 }
@@ -218,6 +221,11 @@ img{
 #announcements{
     display: flex;
     flex-direction: column;
+    gap: 25px;
+}
+#announcements > p{
+    margin: 0;
+    margin-top: 30px;
 }
 .divider{
     width: 100%;
