--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body{
     font-size: 16px;
     justify-content: center;
     align-items: center;
+    padding: 0;
+    margin: 0;
 }
 img{
     border-radius: 50%;
@@ -76,6 +78,7 @@ img{
     align-items: center;
     gap: 15px;
     margin: 0 50px;
+    font-size: 15px;
 }
 #searchSection input{
     flex: 1;
